--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tippyjs/react": "^4.2.6",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.9.0",
     "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
